--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   },
@@ -16,7 +18,8 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/react": "^16.9.51",
     "husky": "^4.3.0",
-    "jest": "^26.5.2"
+    "jest": "^26.5.2",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "test": "jest --watchAll",
