--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "jest --watchAll",
     "start": "next start",
     "dev": "next dev",
-    "build": "build next"
+    "build": "next build"
   },
   "author": "",
   "license": "MIT",
