--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scrollmagic": "^2.2.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   },
