--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^2.9.1",
-    "gsap": "^3.5.1",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-scrollmagic": "^2.2.0",
-    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
