--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "aos": "^2.3.4",
     "framer-motion": "^2.9.1",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.29.1",
     "react-redux": "^7.2.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
