--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "commitlint.config.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "commitlint.config.js",
+    "src/components/rateCompany/emojefaces.js"
+  ],
   "exclude": ["node_modules"]
 }
