--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react-dom": "^16.13.1",
     "react-intersection-observer": "^8.29.1",
     "react-redux": "^7.2.1",
+    "react-timeago": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
+    "swr": "^0.3.5",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
