--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.0",
     "framer-motion": "^2.9.1",
     "next": "^9.5.3",
     "react": "^16.13.1",
