--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-timeago": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "swr": "^0.3.5",
