--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.0",
-    "bcryptjs": "^2.4.3",
     "firebase": "^8.1.2",
     "framer-motion": "^2.9.1",
     "next": "^9.5.5",
     "query-string": "^6.13.7",
     "react": "^16.13.1",
-    "react-crypt-gsm": "^1.0.4",
     "react-dom": "^16.13.1",
     "react-intersection-observer": "^8.29.1",
     "react-lottie": "^1.2.3",
@@ -22,7 +20,6 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
-    "swr": "^0.3.5",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
@@ -30,8 +27,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/react": "^16.9.51",
     "husky": "^4.3.0",
-    "jest": "^26.5.2",
-    "redux-devtools-extension": "^2.13.8"
+    "jest": "^26.5.2"
   },
   "scripts": {
     "test": "jest --watchAll",
