--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^0.21.0",
     "firebase": "^8.1.2",
     "framer-motion": "^2.9.1",
